# sway.module_math

./: .bettercodehub.yml  .clang-format  .codedocs  CMakeLists.txt  Jenkinsfile  README.md
docs/doxygen/: doxyfile.doxy
docs/doxygen/pages/: mainpage.dox  mainpage.md
doxygen_resources/: doxyfile.doxy
include/sway/: math.h
include/sway/math/: color.h  matrix4.h  point.h  rect.h  size.h  size.inl  vector.h  vector2.h  vector3.h  vector4.h  vertex.h
lib/cpp/include/sway/math/: boundingbox.hpp  ray.hpp  size.inl  vertex.hpp
lib/cpp/tests/google/: vector3.spec.cpp  vector4.spec.cpp
lib/cxx/include/sway/: math.hpp
lib/cxx/include/sway/math/: border.hpp  boundingbox.hpp  color.hpp  matrix4.hpp  matrixstack.hpp  matrixtypes.hpp  point.hpp  ray.hpp  rect.hpp  rect.inl  rectangles.hpp  rectedges.hpp  size.hpp  size.inl  utils.hpp  vector.hpp  vector2.hpp  vector3.hpp  vector4.hpp  vertex.hpp
lib/cxx/include/sway/math/extensions/: coordinatesystemutils.hpp  projection.hpp
lib/cxx/tests/google/: CMakeLists.txt  README.md  color.spec.cpp  coordinatesystemutils.spec.cpp  matrix4.spec.cpp  point.spec.cpp  rect.spec.cpp  size.spec.cpp  transform.spec.cpp  utils.spec.cpp  vector2.spec.cpp  vector3.spec.cpp  vector4.spec.cpp  vertex.spec.cpp
lib/include/sway/: math.hpp
lib/include/sway/math/: boundingbox.hpp  color.hpp  matrix.hpp  matrix4.hpp  point.hpp  ray.hpp  rect.hpp  size.hpp  size.inl  transform.hpp  utils.hpp  vector.hpp  vector2.hpp  vector3.hpp  vector4.hpp  vertex.hpp
lib/include/sway/math/extensions/: projection.hpp  projectiontypes.hpp
lib/tests/google/: CMakeLists.txt  color.spec.cpp  matrix4.spec.cpp  point.spec.cpp  rect.spec.cpp  size.spec.cpp  transform.spec.cpp  vector3.spec.cpp  vector4.spec.cpp  vertex.spec.cpp
tests/: CMakeLists.txt  color.spec.cpp  main.cpp  matrix4.spec.cpp  point.spec.cpp  rect.spec.cpp  size.spec.cpp  vector3.spec.cpp  vector4.spec.cpp  vertex.spec.cpp
